js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-function-await-import-source-empty-str-is-valid-assign-expr.js
async
function
f
(
)
{
await
import
.
source
(
'
<
module
source
>
'
)
;
}
reportCompare
(
0
0
)
;
