js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-arrow-function-return-await-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
(
async
(
)
=
>
await
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
)
